--- a/transcriptomics-data-analysis-and-visualization.qmd
+++ b/transcriptomics-data-analysis-and-visualization.qmd
@@ -1,4 +1,4 @@
-# 转录组学数据分析和可视化
+# 转录组学数据分析
 
 在本项目中，我们使用 RNA-seq 技术定量细菌基因表达差异。首先，介绍实验设计、数据预处理、比对、计数、差异分析和功能富集的完整流程。然后，通过一个案例研究，展示如何将这些步骤应用于实际数据。此处选用的案例是 2021 年发表在 ISME Communications 上的论文[@gao2021a]。
 
@@ -144,8 +144,7 @@ dotplot(gse)
 
 ## 研究方法
 
-::: {.columns}
-::: {.column width="60%"}
+
 - **合成菌群构建**：  
   - 模式菌种：  
     - *E. coli*（大肠杆菌）  
@@ -155,15 +154,7 @@ dotplot(gse)
 - **分析手段**：  
   - 群落结构变化  
   - 全基因组转录组测序  
-:::
 
-::: {.column width="40%"}
-![合成菌群实验设计](media/image1.png){width=80%}  
-*图1：合成菌群基因表达收敛过程*  
-:::
-:::
-
----
 
 ## 研究结果
 
