--- a/transcriptomics-data-analysis-in-action.qmd
+++ b/transcriptomics-data-analysis-in-action.qmd
@@ -1,6 +1,6 @@
 # 转录组数据分析实战
 
-本章介绍如何使用 R 进行 RNA-seq 数据分析，包括从原始计数数据开始的差异表达基因（DEGs）识别过程。
+本章介绍如何使用 R 进行 RNA-seq 数据分析，包括从原始计数数据开始的差异表达基因（DEGs）识别过程。本实例采用的 RNA-seq 数据来自 2021 年发表在 ISME Communications 上的论文[@gao2021a]，用于复现文章分析结果的代码托管在 [GitHub](https://github.com/gaospecial/deg)。
 
 ## 识别差异表达基因 (Differentially Expressed Genes, DEGs)
 
@@ -91,7 +91,44 @@ dds.PP <- DESeq(dds.PP)
 定义比较组并提取差异表达基因结果。
 
 ```{r}
-source("deg/functions/functions.R")
+#' 依据 comparison 的分组信息从 dds 中获取结果,并进行富集分析,返回dotplot
+#'
+#' @param dds 
+#' @param comparison 
+#' @param lfcThreshold 
+#' @param p.adjusted 
+#'
+#' @return A list of DEG
+#' @export
+#'
+#' @examples
+myDEG_Results <- function(dds = NULL, comparison = NULL, 
+                          lfcThreshold = 1,p.adjusted=0.05,
+                          filtered = TRUE) {
+  require(tibble,quietly = T)
+  require(dplyr,quietly = T)
+  results <- lapply(comparison, function(x){
+    results(dds, contrast = c("group",x),
+            lfcThreshold = lfcThreshold,
+            alpha = p.adjusted)
+  })
+  names(results) <- sapply(comparison,function(x)paste(x,collapse = "_vs_"))
+  for (i in seq_along(results)){
+    results[[i]] %<>%
+      as.data.frame() %>%
+      rownames_to_column(var="gene") %>%
+      as_tibble() %>%
+      mutate(comparison = names(results[i])) 
+  }
+  if (!filtered) return(results)
+  for (i in seq_along(results)){
+    results[[i]] %<>%
+      filter(padj < p.adjusted) %>%
+      dplyr::select(gene,log2FoldChange,padj,comparison) %>%
+      mutate(expression = ifelse(log2FoldChange>0,"up","dn")) 
+  }
+  return(results)
+}
 ```
 
 ```{r}
@@ -134,6 +171,9 @@ gene_expression.PP <- myDEG_Results(dds.PP, comparison = comparisons.PP, filtere
 PCA 是一种常用的数据降维方法，用于探索样本间的整体表达模式差异。我们通过 PCA 展示 *E. coli* 和 *P. putida* 在不同时间点和条件下的基因表达变化。
 
 ```{r}
+#| label: fig-pca_plot
+#| fig-cap: PCA 分析结果
+#| fig-width: 10
 # 加载必要的包
 library(cowplot)
 library(ggplot2)
@@ -196,6 +236,9 @@ plot_grid(plotlist = list_of_PCA_plot, labels = "auto", ncol = 1)
 我们绘制了每个时间点和条件下差异表达基因的数量，并用颜色区分上调和下调基因。
 
 ```{r}
+#| label: fig-deg_count_plot
+#| fig-cap: 差异表达基因数量统计
+#| fig-width: 10
 library(stringr)
 
 # 统计差异表达基因数量
@@ -242,6 +285,9 @@ plot_grid(plotlist = deg_count_plots, labels = "auto", ncol = 1)
 为了展示不同时间点之间差异基因的重叠情况，我们使用 Venn 图进行可视化。
 
 ```{r}
+#| label: fig-venn_plot
+#| fig-cap: Venn 图展示特异性差异基因
+#| fig-width: 10
 # 加载必要的包
 library(ggVennDiagram)
 library(ggtext)
@@ -341,6 +387,9 @@ ck2 <- compareCluster(
 
 
 ```{r}
+#| label: fig-kegg_plot
+#| fig-cap: KEGG 富集分析结果可视化
+#| fig-width: 10
 #| fig-asp: 1.5
 # 定义 KEGG 富集分析绘图函数
 ck_plot <- function(ck) {
@@ -494,6 +543,9 @@ df2 <- gse_result(gseKEGG_results.PP) %>%
 最后，我们使用点图展示 GSEA 分析结果，突出显示激活或抑制的通路。
 
 ```{r}
+#| label: fig-gsea_plot
+#| fig-cap: GSEA 结果可视化
+#| fig-width: 10
 #| fig-asp: 1.5
 # 定义 GSEA 点图绘图函数
 gse_dotplot <- function(df) {
